update company files for auth to work correctly and add create job endpoint in /company